# kwork_fresh_projects

./: .gitignore  Dockerfile  GEMINI.md  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
src/: .env.template  categories.json  config.py  data.json  main.py  new.json  projects.json  qefwef.json  test.json  test.py  user_cats.json  users.json
src/bot/: exception.py  handlers.py  keyboards.py  messages.py  middlewares.py  states.py  texts.py
src/bot/services/: category_service.py  db_service.py  message_service.py  parser_service.py  state_service.py
src/business/: category_rules.py  project_filter.py
src/business/models/: category.py  project.py
src/parser/: __init__.py  categories_parser_service.py  cats.json  kwork_api_service.py  main.py  parser_service.py  saver_service.py
src/services/: categories_parser_service.py  kwork_api_service.py  main.py  parser_service.py  saver_service.py  storage_service.py
