[project]
name = "kwork-fresh-wants"
version = "0.1.0"
description = "Это телеграм бот, который отпарвяет вам пуш-уведомления об новый проектах на бирже Kwork из нужной вам категории"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "aiogram (>=3.21.0,<4.0.0)",
    "aiohttp (>=3.12.14,<4.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "aiogram-dialog (>=2.4.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "kwork_fresh_wants", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
